data/derived/sp14/progs/unify/prog1686.ml.out
Characters 86-88:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a -> 'a -> 'a
       but an expression was expected of type 'a list
